--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,3 +5,9 @@
     Description:
         This is where any of your application specific styles should be included
 */
+
+.logincss{
+	 width: 50%;
+     margin: 0 auto;
+     padding: 10px;
+    }
