made few changes

--- a/src/js/views/login.html
+++ b/src/js/views/login.html
@@ -6,18 +6,14 @@
 <div>
   <oj-form-layout id="form-container">
     <!-- <oj-input-text id="input" required value="text" label-hint="Name"></oj-input-text> -->
-    <oj-label id="inputgroup" label-id="inputgrouplabel">Name *</oj-label>
-    <div class="oj-form-control-group" aria-labelledby="inputgrouplabel" role="group">
-      <oj-input-text style="max-width:49.7%" aria-label="this is the input1 label text" placeholder="First Name"></oj-input-text>
-      <oj-input-text style="max-width:49.7%" aria-label="this is the input2 label text" placeholder="Last Name"></oj-input-text>
-    </div>
+  
     <oj-input-text id="input2" style="max-width:100%" type="text" label-hint="Username"></oj-input-text>
-    <oj-input-text id="input2" style="max-width:100%" type="email" label-hint="Email"></oj-input-text>
-    <oj-input-text id="input2" style="max-width:100%" type="text" label-hint="Phone"></oj-input-text>
-    <oj-input-password id="password" style="max-width:100%" value="{{value}}" label-hint="Password"></oj-input-password>
-    <oj-input-text id="input2" style="max-width:100%" type="text" label-hint="Location"></oj-input-text>
-    <oj-input-text id="input2" style="max-width:100%" type="text" label-hint="Stack" placeholder="E.g. MongoDB, ExpressJS, ReactJS and NodeJS"></oj-input-text>
-    <oj-button id='button1' on-oj-action='[[buttonClick]]'>Sign-up</oj-button>
+  
+    <oj-input-password id="password" style="max-width:100%" label-hint="Password"></oj-input-password>
+    
+    <oj-button id='button1' on-oj-action='[[buttonClick]]'>Login</oj-button>
+
+    <P>Not yet Registered?  Click <oj-button id='button1' on-oj-action='[[buttonClick]]'>Register</oj-button></P>
   </oj-form-layout>
 </div>
 
