--- a/src/js/views/profile.html
+++ b/src/js/views/profile.html
@@ -3,8 +3,21 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>Profile Content Area</h1>
+  <h1>Profile Details</h1>
   <div>
-      To change the content of this section, you will make edits to the about.html file located in the /js/views folder.
+      <p>
+      	<h3>Welcome</h3>
+      	Name: Luke Precious
+      </p>
+      <hr>
+
+  </div>
+
+  <div>
+  	<p>
+  		<h2> Country</h2>
+  	</p>
+
+
   </div>
 </div>
