laying down structure

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -2,9 +2,10 @@
  Copyright (c) 2014, 2019, Oracle and/or its affiliates.
  The Universal Permissive License (UPL), Version 1.0
  -->
-<div class="oj-hybrid-padding">
-  <h1>Home Content Area</h1>
+ <div class="oj-hybrid-padding">
+  <h1>Welcome Back !</h1>
   <div>
-      To change the content of this section, you will make edits to the dashboard.html file located in the /js/views folder.
+    Good to have you on board !
+    <p>Ideally, a user should not have access till successful log in</p>
   </div>
 </div>
