--- a/src/js/views/profile.html
+++ b/src/js/views/profile.html
@@ -2,22 +2,9 @@
  Copyright (c) 2014, 2019, Oracle and/or its affiliates.
  The Universal Permissive License (UPL), Version 1.0
  -->
-<div class="oj-hybrid-padding">
-  <h1>Profile Details</h1>
+ <div class="oj-hybrid-padding">
+  <h1>Profile</h1>
   <div>
-      <p>
-      	<h3>Welcome</h3>
-      	Name: Luke Precious
-      </p>
-      <hr>
-
-  </div>
-
-  <div>
-  	<p>
-  		<h2> Country</h2>
-  	</p>
-
-
+      This will be served from an api endpoint
   </div>
 </div>
