--- a/src/js/views/login.html
+++ b/src/js/views/login.html
@@ -2,19 +2,34 @@
  Copyright (c) 2014, 2019, Oracle and/or its affiliates.
  The Universal Permissive License (UPL), Version 1.0
  -->
-<div class="oj-hybrid-padding logincss">
-<div>
-  <oj-form-layout id="form-container">
-    <!-- <oj-input-text id="input" required value="text" label-hint="Name"></oj-input-text> -->
-  
-    <oj-input-text id="input2" style="max-width:100%" type="text" label-hint="Username"></oj-input-text>
-  
-    <oj-input-password id="password" style="max-width:100%" label-hint="Password"></oj-input-password>
-    
-    <oj-button id='button1' on-oj-action='[[buttonClick]]'>Login</oj-button>
+ <div class="oj-hybrid-padding logincss">
+  <div>
+    <oj-form-layout id="form-container">
+      <!-- <oj-input-text id="input" required value="text" label-hint="Name"></oj-input-text> -->
 
-    <P>Not yet Registered?  Click <oj-button id='button1' on-oj-action='[[buttonClick]]'>Register</oj-button></P>
-  </oj-form-layout>
-</div>
+      <oj-input-text
+        id="input2"
+        style="max-width:100%"
+        type="text"
+        label-hint="Username"
+      ></oj-input-text>
 
+      <oj-input-password
+        id="password"
+        style="max-width:100%"
+        label-hint="Password"
+      ></oj-input-password>
+
+      <oj-button id="button1" on-oj-action="([[buttonClick]])">Login</oj-button>
+
+      <P
+        >Not yet Registered? Click
+        <oj-button id="button1" on-oj-action="([[buttonClick]])"
+          >Register</oj-button
+        ></P
+      >
+    </oj-form-layout>
+
+    <p>We wil conditionally render this page. Look into knockout JS at depth</p>
+  </div>
 </div>
