--- a/src/js/views/login.html
+++ b/src/js/views/login.html
@@ -1,35 +1,22 @@
-<!--
- Copyright (c) 2014, 2019, Oracle and/or its affiliates.
- The Universal Permissive License (UPL), Version 1.0
- -->
- <div class="oj-hybrid-padding logincss">
-  <div>
-    <oj-form-layout id="form-container">
-      <!-- <oj-input-text id="input" required value="text" label-hint="Name"></oj-input-text> -->
 
-      <oj-input-text
-        id="input2"
-        style="max-width:100%"
-        type="text"
-        label-hint="Username"
-      ></oj-input-text>
-
-      <oj-input-password
-        id="password"
-        style="max-width:100%"
-        label-hint="Password"
-      ></oj-input-password>
-
-      <oj-button id="button1" on-oj-action="([[buttonClick]])">Login</oj-button>
-
-      <P
-        >Not yet Registered? Click
-        <oj-button id="button1" on-oj-action="([[buttonClick]])"
-          >Register</oj-button
-        ></P
-      >
-    </oj-form-layout>
-
-    <p>We wil conditionally render this page. Look into knockout JS at depth</p>
-  </div>
+<div align="center">
+<label for="username">Username</label>
+<input id="username" type="text" required 
+       data-bind="ojComponent: {component: 'ojInputText',
+                                validators: [{type: 'regExp', options: {pattern: '[a-zA-Z0-9]{3,}',
+                                messageDetail: 'You must enter at least 3 letters or numbers'}}],
+                            invalidComponentTracker: tracker}" /><br /><br />
+<label for="password">Password</label>
+<input id="password" type="password" required
+       data-bind="ojComponent: {component: 'ojInputPassword',
+                                validators: [{type: 'regExp', options : {pattern: '(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{6,}',
+                                messageSummary : '{label} too Weak',
+                                messageDetail: 'The password must contain atleast one uppercase, one lowercase, one number and must be 6 digits long'}}],
+                                invalidComponentTracker: tracker}" /><br /><br />
+<a class="oj-button-primary oj-button-xl" 
+   id="create" type="button" 
+   data-bind="ojComponent: {component: 'ojButton', 
+                            label: 'Login',
+                            disabled: shouldDisableCreate()},
+        click: onClick"></a>
 </div>
